--- a/First Website/style.css
+++ b/First Website/style.css
@@ -80,8 +80,45 @@ nav img{
     background: #f44336;
     transition: 1s;
 }
+
+nav svg{
+    display: none;
+}
+
 @media(max-width: 700px){
-    
+    .text-box h1{
+        font-size: 20px;
+    }
+    .nav-links ul li{
+        display: block;
+    }
+    .nav-links{
+        position: absolute;
+        background: #f44336;
+        height: 100vh;
+        width: 200px;
+        top: 0;
+        right: -200px;
+        text-align: left;
+        z-index: 2;
+        transition: 1s;
+    }
+    nav svg{
+        display: block;
+        color: #fff;
+        margin: 10px;
+        font-size: 22px;
+        cursor: pointer;
+    }
+    .nav-links ul{
+        padding: 30px;
+    }
+    .row{
+        flex-direction: column;
+    }
+    .cta h1{
+        font-size: 24px;
+    }
 }
 
 /*---- course ----*/
@@ -123,11 +160,6 @@ h3{
 }
 .column:hover{
     box-shadow: 0 0 20px 0px rgba(0,0,0,0.2);
-}
-@media(max-width: 700px){
-    .row{
-        flex-direction: column;
-    }
 }
 
 /*---campus---*/
@@ -234,4 +266,25 @@ h3{
 .testimonial-col h3{
     margin-top: 15px;
     text-align: left;
+}
+.testimonial-col svg{
+    color: #f44336;
+}
+
+/*---CTA---*/
+
+.cta{
+    margin: 100px auto;
+    width: 80%;
+    background-image: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)),url(eduford_img/banner2.jpg);
+    background-position: center;
+    background-size: cover;
+    border-radius: 10px;
+    text-align: center;
+    padding: 100px 0;
+}
+.cta h1{
+    color: #fff;
+    margin-bottom: 40px;
+    padding: 0;
 }
