--- a/First Website/style.css
+++ b/First Website/style.css
@@ -288,3 +288,22 @@ h3{
     margin-bottom: 40px;
     padding: 0;
 }
+
+/*---footer---*/
+
+.footer{
+    width: 100%;
+    text-align: center;
+    padding: 30px 0;
+}
+.footer h4{
+    margin-bottom: 25px;
+    margin-top: 20px;
+    font-weight: 600;
+}
+.icons svg{
+    color: #f44336;
+    margin: 0 13px;
+    cursor: pointer;
+    padding: 18px 0;
+}
